// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container renders correctly 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-4 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.emotion-4>* {
  margin-top: 0;
}

.emotion-4>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly on edition mode 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-4 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #4f0599;
  opacity: inherit;
  cursor: default;
}

.emotion-4>* {
  margin-top: 0;
}

.emotion-4>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly when disabled 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-4 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 24px;
  padding-bottom: 24px;
  border: 1px solid #d4dae7;
  opacity: 0.4;
  cursor: not-allowed;
}

.emotion-4>* {
  margin-top: 0;
}

.emotion-4>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-4"
      disabled=""
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;

exports[`Container renders correctly with small variant 1`] = `
<DocumentFragment>
  .emotion-1 {
  margin-top: 40px;
}

.emotion-4 {
  padding: 24px;
  border-radius: 4px;
  border: 1px solid #d4dae7;
  padding-left: 24px;
  padding-right: 24px;
  padding-top: 16px;
  padding-bottom: 16px;
  border: 1px solid #d4dae7;
  opacity: inherit;
  cursor: default;
}

.emotion-4>* {
  margin-top: 0;
}

.emotion-4>*+* {
  margin-top: 16px;
}

<div
    class="emotion-0 emotion-1"
  >
    <div
      class="emotion-2 emotion-3 emotion-4"
    >
      Hello
    </div>
  </div>
</DocumentFragment>
`;
